Fixed wrapping around when calculating adjustment value
Also changed one coding preference: We now prefer predefined types for .net framework types. Finally, a little change to the text on the Flaps encoder.

--- a/MsfsPlugin/MsfsPlugin/MsfsPlugin.csproj
+++ b/MsfsPlugin/MsfsPlugin/MsfsPlugin.csproj
@@ -62,6 +62,7 @@
   <ItemGroup>
     <Compile Include="encoder\SimRateEncoder.cs" />
     <Compile Include="encoder\BarometerEncoder.cs" />
+    <Compile Include="encoder\VorObiEncoder.cs" />
     <Compile Include="encoder\VSpeedAPEncoder.cs" />
     <Compile Include="encoder\SpeedAPEncoder.cs" />
     <Compile Include="encoder\HeadignAPEncoder.cs" />
