Added a class for debug tracing and restricted access to Binding properties from external classes.

--- a/MsfsPlugin/.editorconfig
+++ b/MsfsPlugin/.editorconfig
@@ -92,7 +92,7 @@ csharp_prefer_static_local_function = false:warning
 csharp_preferred_modifier_order = public,private,protected,internal,static,extern,new,virtual,abstract,sealed,override,readonly,unsafe,volatile,async
 
 # Code-block preferences
-csharp_prefer_braces = true:warning
+csharp_prefer_braces = when_multiline:warning
 csharp_prefer_simple_using_statement = false:warning
 
 # Expression-level preferences
