--- a/MsfsPlugin/MsfsPlugin/MsfsPlugin.csproj
+++ b/MsfsPlugin/MsfsPlugin/MsfsPlugin.csproj
@@ -125,6 +125,7 @@
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="tools\DebugTracing.cs" />
     <Compile Include="tools\DecimalValueAdjuster.cs" />
     <Compile Include="tools\ImageTool.cs" />
     <Compile Include="tools\ConvertTool.cs" />
