--- a/MsfsPlugin/MsfsPlugin/MsfsPlugin.csproj
+++ b/MsfsPlugin/MsfsPlugin/MsfsPlugin.csproj
@@ -100,6 +100,7 @@
     <Compile Include="input\debug\SimCnxStateInput.cs" />
     <Compile Include="input\debug\DebugInput.cs" />
     <Compile Include="input\debug\AircraftInput.cs" />
+    <Compile Include="input\light\LightsDisplay.cs" />
     <Compile Include="input\light\LightsMultiInputs.cs" />
     <Compile Include="input\misc\AutoTaxiInput.cs" />
     <Compile Include="input\misc\IconInput.cs" />
