--- a/MsfsPlugin/MsfsPlugin/MsfsPlugin.csproj
+++ b/MsfsPlugin/MsfsPlugin/MsfsPlugin.csproj
@@ -91,6 +91,7 @@
     <Compile Include="folder\APDynamicFolder.cs" />
     <Compile Include="folder\ATCDynamicFolder.cs" />
     <Compile Include="folder\CockpitViewFolder.cs" />
+    <Compile Include="folder\DefaultFolder.cs" />
     <Compile Include="folder\NavDynamicSFolder.cs" />
     <Compile Include="folder\NavDynamicFolder.cs" />
     <Compile Include="folder\ComDynamicSFolder.cs" />
