Corrected name of AP-heading encoder
NOTE!: After getting this change, you need to reassign any encoder bound assigned to this function.

--- a/MsfsPlugin/MsfsPlugin/MsfsPlugin.csproj
+++ b/MsfsPlugin/MsfsPlugin/MsfsPlugin.csproj
@@ -73,7 +73,7 @@
     <Compile Include="encoder\VorObiEncoder.cs" />
     <Compile Include="encoder\VSpeedAPEncoder.cs" />
     <Compile Include="encoder\SpeedAPEncoder.cs" />
-    <Compile Include="encoder\HeadignAPEncoder.cs" />
+    <Compile Include="encoder\HeadingAPEncoder.cs" />
     <Compile Include="encoder\ElevatorTrimEncoder.cs" />
     <Compile Include="encoder\DefaultEncoder.cs" />
     <Compile Include="encoder\AltitudeAPEncoder.cs" />
