Inputs now all use named binding objects rather than the bindings array

--- a/MsfsPlugin/MsfsPlugin/MsfsPlugin.csproj
+++ b/MsfsPlugin/MsfsPlugin/MsfsPlugin.csproj
@@ -86,6 +86,7 @@
     <Compile Include="encoder\ThrottleEncoder.cs" />
     <Compile Include="encoder\SpoilerEncoder.cs" />
     <Compile Include="event\Binding.cs" />
+    <Compile Include="event\BindingExtensions.cs" />
     <Compile Include="event\BindingKeys.cs" />
     <Compile Include="event\INotifiable.cs" />
     <Compile Include="folder\AirlinerDynamicFolder.cs" />
