--- a/MsfsPlugin/MsfsPlugin/MsfsPlugin.csproj
+++ b/MsfsPlugin/MsfsPlugin/MsfsPlugin.csproj
@@ -1,51 +1,29 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
-<Project ToolsVersion="15.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
-  <Import Project="..\packages\NUnit3TestAdapter.4.5.0\build\net462\NUnit3TestAdapter.props" Condition="Exists('..\packages\NUnit3TestAdapter.4.5.0\build\net462\NUnit3TestAdapter.props')" />
-  <Import Project="..\packages\NUnit.4.0.1\build\NUnit.props" Condition="Exists('..\packages\NUnit.4.0.1\build\NUnit.props')" />
-  <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
+<Project Sdk="Microsoft.NET.Sdk">
+
   <PropertyGroup>
-    <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
-    <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{1AD1275A-D72D-42A3-8469-F670A4561EB6}</ProjectGuid>
-    <OutputType>Library</OutputType>
-    <AppDesignerFolder>Properties</AppDesignerFolder>
+    <TargetFramework>net8.0</TargetFramework>
+    <ImplicitUsings>enable</ImplicitUsings>
+    <Nullable>disable</Nullable>
     <RootNamespace>Loupedeck.MsfsPlugin</RootNamespace>
-    <AssemblyName>MsfsPlugin</AssemblyName>
-    <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
-    <NuGetPackageImportStamp>
-    </NuGetPackageImportStamp>
-  </PropertyGroup>
-  <PropertyGroup>
-    <BaseIntermediateOutputPath>$(SolutionDir)..\obj\</BaseIntermediateOutputPath>
-    <BaseOutputPath>$(SolutionDir)..\bin\</BaseOutputPath>
-    <OutputPath>$(BaseOutputPath)$(Configuration)\</OutputPath>
-  </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
-    <DebugSymbols>true</DebugSymbols>
-    <DebugType>full</DebugType>
-    <Optimize>false</Optimize>
-    <OutputPath>bin\Debug\</OutputPath>
-    <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
-    <PlatformTarget>x64</PlatformTarget>
+
+    <AppendTargetFrameworkToOutputPath>false</AppendTargetFrameworkToOutputPath>
+    <CopyLocalLockFileAssemblies>true</CopyLocalLockFileAssemblies>
+
+    <PluginApiDir Condition="$(OS) == 'Windows_NT'">C:\Program Files\Logi\LogiPluginService\</PluginApiDir>
+    <PluginApiDir Condition="$(OS) != 'Windows_NT'">/Applications/Utilities/LogiPluginService.app/Contents/MonoBundle/</PluginApiDir>
+
+    <PluginDir Condition="$(OS) == 'Windows_NT'">$(LocalAppData)\Logi\LogiPluginService\Plugins\</PluginDir>
+    <PluginDir Condition="$(OS) != 'Windows_NT'">~/Library/Application\ Support/Logi/LogiPluginService/Plugins/</PluginDir>
   </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
-    <DebugType>pdbonly</DebugType>
-    <Optimize>true</Optimize>
-    <DefineConstants>TRACE</DefineConstants>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
-    <PlatformTarget>x64</PlatformTarget>
-    <OutputPath>bin\Release\</OutputPath>
-  </PropertyGroup>
-  <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Debug|x64'">
-    <OutputPath>..\..\..\..\..\AppData\Local\Loupedeck\Plugins\</OutputPath>
-  </PropertyGroup>
-  <PropertyGroup>
-    <RunPostBuildEvent>OnBuildSuccess</RunPostBuildEvent>
-  </PropertyGroup>
+
+  <ItemGroup>
+    <Reference Include="PluginApi">
+      <HintPath>$(PluginApiDir)PluginApi.dll</HintPath>
+    </Reference>
+  </ItemGroup>
   <ItemGroup>
     <Reference Include="Microsoft.FlightSimulator.SimConnect, Version=10.0.61259.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=x86">
       <SpecificVersion>False</SpecificVersion>
@@ -57,212 +35,25 @@
     <Reference Include="nunit.framework.legacy, Version=4.0.1.0, Culture=neutral, PublicKeyToken=2638cd05610744eb, processorArchitecture=MSIL">
       <HintPath>..\packages\NUnit.4.0.1\lib\net462\nunit.framework.legacy.dll</HintPath>
     </Reference>
-    <Reference Include="PluginApi, Version=2.0.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>C:\Program Files (x86)\Loupedeck\Loupedeck2\PluginApi.dll</HintPath>
-    </Reference>
-    <Reference Include="System" />
-    <Reference Include="Microsoft.CSharp" />
-    <Reference Include="System.Design" />
-    <Reference Include="System.Windows.Forms" />
-    <Reference Include="WindowsBase" />
   </ItemGroup>
-  <ItemGroup>
-    <Compile Include="encoder\SimRateEncoder.cs" />
-    <Compile Include="encoder\BarometerEncoder.cs" />
-    <Compile Include="encoder\TrimEncoder.cs" />
-    <Compile Include="encoder\VorObiEncoder.cs" />
-    <Compile Include="encoder\VSpeedAPEncoder.cs" />
-    <Compile Include="encoder\SpeedAPEncoder.cs" />
-    <Compile Include="encoder\HeadingAPEncoder.cs" />
-    <Compile Include="encoder\ElevatorTrimEncoder.cs" />
-    <Compile Include="encoder\DefaultEncoder.cs" />
-    <Compile Include="encoder\AltitudeAPEncoder.cs" />
-    <Compile Include="encoder\MixtureEncoder.cs" />
-    <Compile Include="encoder\FlapEncoder.cs" />
-    <Compile Include="encoder\AileronTrimEncoder.cs" />
-    <Compile Include="encoder\RudderTrimEncoder.cs" />
-    <Compile Include="encoder\PropellerEncoder.cs" />
-    <Compile Include="encoder\ThrottleEncoder.cs" />
-    <Compile Include="encoder\SpoilerEncoder.cs" />
-    <Compile Include="event\Binding.cs" />
-    <Compile Include="event\BindingExtensions.cs" />
-    <Compile Include="event\BindingKeys.cs" />
-    <Compile Include="event\INotifiable.cs" />
-    <Compile Include="folder\AirlinerDynamicFolder.cs" />
-    <Compile Include="folder\APDynamicFolder.cs" />
-    <Compile Include="folder\ATCDynamicFolder.cs" />
-    <Compile Include="folder\CockpitViewFolder.cs" />
-    <Compile Include="folder\DefaultFolder.cs" />
-    <Compile Include="folder\NavDynamicSFolder.cs" />
-    <Compile Include="folder\NavDynamicFolder.cs" />
-    <Compile Include="folder\ComDynamicSFolder.cs" />
-    <Compile Include="folder\ComDynamicFolder.cs" />
-    <Compile Include="folder\LightsDynamicFolder.cs" />
-    <Compile Include="input\ap\APMultiInputs.cs" />
-    <Compile Include="input\debug\SimCnxStateInput.cs" />
-    <Compile Include="input\debug\DebugInput.cs" />
-    <Compile Include="input\debug\AircraftInput.cs" />
-    <Compile Include="input\light\LightsDisplay.cs" />
-    <Compile Include="input\light\LightsMultiInputs.cs" />
-    <Compile Include="input\misc\AutoTaxiInput.cs" />
-    <Compile Include="input\misc\IconInput.cs" />
-    <Compile Include="input\misc\GearInput.cs" />
-    <Compile Include="input\misc\EngineInput.cs" />
-    <Compile Include="input\misc\MiscInput.cs" />
-    <Compile Include="input\misc\ParkingBrakeInput.cs" />
-    <Compile Include="input\DefaultInput.cs" />
-    <Compile Include="input\misc\FuelDisplay.cs" />
-    <Compile Include="input\misc\SpoilerArmInput.cs" />
-    <Compile Include="input\misc\PushbackInput.cs" />
-    <Compile Include="input\misc\PauseInput.cs" />
-    <Compile Include="input\nav\APWPDisplay.cs" />
-    <Compile Include="input\misc\RPMInput.cs" />
-    <Compile Include="input\misc\PitotInput.cs" />
-    <Compile Include="input\nav\AltitudeInput.cs" />
-    <Compile Include="input\misc\WeatherDisplay.cs" />
-    <Compile Include="input\nav\VerticalSpeedInput.cs" />
-    <Compile Include="input\nav\SpeedInput.cs" />
-    <Compile Include="input\nav\HeadingInput.cs" />
-    <Compile Include="msfs\DataTransferIn.cs" />
-    <Compile Include="msfs\DataTransferOut.cs" />
-    <Compile Include="msfs\DataTransferTypes.cs" />
-    <Compile Include="msfs\mobi\FSUIPCOffsetType.cs" />
-    <Compile Include="msfs\mobi\Log.cs" />
-    <Compile Include="msfs\mobi\ProgressUpdateEvent.cs" />
-    <Compile Include="msfs\mobi\SimConnectCache.cs" />
-    <Compile Include="msfs\mobi\SimConnectDefinitions.cs" />
-    <Compile Include="msfs\mobi\WasmModuleClient.cs" />
-    <Compile Include="msfs\mobi\WasmModuleClientData.cs" />
-    <Compile Include="msfs\SimConnectDAO.cs" />
-    <Compile Include="msfs\MsfsData.cs" />
-    <Compile Include="Properties\Resources.Designer.cs">
-      <AutoGen>True</AutoGen>
-      <DesignTime>True</DesignTime>
-      <DependentUpon>Resources.resx</DependentUpon>
-    </Compile>
-    <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="tools\CommonEntity.cs" />
-    <Compile Include="tools\DebugTracing.cs" />
-    <Compile Include="tools\DecimalValueAdjuster.cs" />
-    <Compile Include="tools\ImageTool.cs" />
-    <Compile Include="tools\ConvertTool.cs" />
-    <Compile Include="MSFSApplication.cs" />
-    <Compile Include="MSFSPlugin.cs" />
-    <Compile Include="Unittests\ConvertToolTest.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <EmbeddedResource Include="PluginConfiguration.json" />
-    <EmbeddedResource Include="Properties\Resources.resx">
-      <Generator>ResXFileCodeGenerator</Generator>
-      <LastGenOutput>Resources.Designer.cs</LastGenOutput>
-    </EmbeddedResource>
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="App.config" />
-    <EmbeddedResource Include="Resources\DefaultProfile30win.lp4" />
-    <EmbeddedResource Include="Resources\DefaultProfile40win.lp4" />
-    <EmbeddedResource Include="Resources\DefaultProfile50win.lp4" />
-    <None Include="packages.config" />
-    <None Include="Resources\LoupedeckPackageRazor.yaml">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </None>
-    <None Include="Resources\LoupedeckPackage.yaml">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </None>
-    <EmbeddedResource Include="Resources\DefaultProfile20win.lp4" />
-    <EmbeddedResource Include="Resources\msfs2020_eventids.cip" />
-  </ItemGroup>
-  <ItemGroup>
-    <EmbeddedResource Include="Resources\off.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <EmbeddedResource Include="Resources\on.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <EmbeddedResource Include="Resources\available.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <EmbeddedResource Include="Resources\disable.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <EmbeddedResource Include="Resources\wait.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <EmbeddedResource Include="Resources\disconnect.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <EmbeddedResource Include="Resources\trying.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <EmbeddedResource Include="Resources\disableBorder.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <EmbeddedResource Include="Resources\onBorder.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <EmbeddedResource Include="Resources\16.png" />
-    <EmbeddedResource Include="Resources\256.png">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Resources\32.png" />
-    <EmbeddedResource Include="Resources\48.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <EmbeddedResource Include="Resources\availableFull.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <EmbeddedResource Include="Resources\disableFull.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <EmbeddedResource Include="Resources\disconnectFull.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <EmbeddedResource Include="Resources\offFull.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <EmbeddedResource Include="Resources\onFull.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <EmbeddedResource Include="Resources\tryingFull.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <EmbeddedResource Include="Resources\waitFull.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <EmbeddedResource Include="Resources\availableBorder.png" />
-  </ItemGroup>
-  <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
-  <PropertyGroup Condition=" '$(Configuration)' == 'Release' ">
-    <PostBuildEvent>$(ILMergeConsolePath) /out:$(OutDir)/bin/win/MSFSPlugin.dll $(OutDir)MSFSPlugin.dll $(OutDir)fsuipcClient.dll</PostBuildEvent>
-  </PropertyGroup>
-  <PropertyGroup>
-    <PostBuildEvent>xcopy "%25MSFS_SDK%25SimConnect SDK\lib\SimConnect.dll" "." /Y
-if $(ConfigurationName) == Release (
-  powershell Remove-Item 'archive' -Recurse -Force
-  powershell New-Item -Path 'archive\bin\win' -ItemType Directory -Force
-  powershell Copy-Item 'MSFSPlugin.dll' -Destination 'archive\bin\win'
-  powershell Copy-Item 'Microsoft.FlightSimulator.SimConnect.dll' -Destination 'archive\bin\win'
-  powershell Copy-Item 'SimConnect.dll' -Destination 'archive\bin\win'
-  powershell New-Item -Path 'archive\metadata' -ItemType Directory -Force
-  powershell Copy-Item 'Resources\LoupedeckPackage.yaml' -Destination 'archive\metadata'
-  powershell Copy-Item 'Resources\256.png' -Destination 'archive\metadata\Icon256x256.png'
-  powershell Compress-Archive -Path 'archive\*' -DestinationPath 'archive\MSFSPluginPackage.zip'
-  powershell Rename-Item -Path 'archive\MSFSPluginPackage.zip' -NewName MSFSPluginPackage.lplug4
-) else (
-  powershell Remove-Item '%25USERPROFILE%25\AppData\Local\Loupedeck\Plugins\MSFS' -Recurse -Force
-  powershell New-Item -Path '%25USERPROFILE%25\AppData\Local\Loupedeck\Plugins\MSFS' -ItemType Directory -Force
-  powershell Copy-Item 'MSFSPlugin.dll' -Destination '%25USERPROFILE%25\AppData\Local\Loupedeck\Plugins\MSFS'
-  powershell Copy-Item 'Microsoft.FlightSimulator.SimConnect.dll' -Destination '%25USERPROFILE%25\AppData\Local\Loupedeck\Plugins\MSFS'
-  powershell Copy-Item 'SimConnect.dll' -Destination '%25USERPROFILE%25\AppData\Local\Loupedeck\Plugins\MSFS'
-
-)</PostBuildEvent>
-  </PropertyGroup>
-  <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
-    <PropertyGroup>
-      <ErrorText>This project references NuGet package(s) that are missing on this computer. Use NuGet Package Restore to download them.  For more information, see http://go.microsoft.com/fwlink/?LinkID=322105. The missing file is {0}.</ErrorText>
-    </PropertyGroup>
-    <Error Condition="!Exists('..\packages\NUnit.4.0.1\build\NUnit.props')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\NUnit.4.0.1\build\NUnit.props'))" />
-    <Error Condition="!Exists('..\packages\NUnit3TestAdapter.4.5.0\build\net462\NUnit3TestAdapter.props')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\NUnit3TestAdapter.4.5.0\build\net462\NUnit3TestAdapter.props'))" />
+ 
+  <Target Name="PostBuild" AfterTargets="PostBuildEvent">
+    <Exec Condition="$(OS) == 'Windows_NT'" Command="echo $(OutputPath) &gt; &quot;$(PluginDir)$(ProjectName).link&quot;" />
+    <Exec Condition="$(OS) != 'Windows_NT'" Command="echo $(OutputPath) &gt; $(PluginDir)$(ProjectName).link" />
   </Target>
+
+  <Target Name="CopyMetadata" AfterTargets="PostBuildEvent">
+    <ItemGroup>
+      <MetadataFiles Include="metadata\*.*" />
+    </ItemGroup>
+    <Copy SourceFiles="@(MetadataFiles)" DestinationFolder="$(OutputPath)metadata" />
+  </Target>
+
+  <Target Name="PluginClean" AfterTargets="CoreClean">
+    <Delete Condition="$(OS) == 'Windows_NT'" Files="$(PluginDir)$(ProjectName).link" />
+    <Exec Condition="$(OS) != 'Windows_NT'" Command="rm -f $(PluginDir)$(ProjectName).link" />
+
+    <RemoveDir Directories="$(OutputPath)metadata" />
+  </Target>
+
 </Project>
